--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -46,4 +46,4 @@
 @import url("./pages/home.css");
 @import url("./pages/manga-details.css");
 @import url("./pages/chapter.css");
-@import url("./pages/search.css"); /* Style cho trang tìm kiếm */ 
+@import url("./pages/search/index.css"); 
